revised vjsp website

--- a/src/app/components/footers/footer/footer.component.html
+++ b/src/app/components/footers/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="relative bg-blueGray-200 pt-8 pb-6">
+<footer class="relative bg-blueGray-200 pt-8 pb-6" id="contact">
   <div
     class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20 h-20"
     style="transform: translateZ(0)"
@@ -21,11 +21,13 @@
   <div class="container mx-auto px-4">
     <div class="flex flex-wrap text-center lg:text-left">
       <div class="w-full lg:w-6/12 px-4">
-        <h4 class="text-3xl font-semibold">Let's keep in touch!</h4>
+        <h4 class="text-3xl font-semibold">Contact Us</h4>
         <h5 class="text-lg mt-0 mb-2 text-blueGray-600">
-          Find us on any of these platforms, we respond 1-2 business days.
+          info@vjsp.in <br>
+          +91 84389 50107 <br>
+          +91 98408 14345
         </h5>
-        <div class="mt-6 lg:mb-0 mb-6">
+        <!--<div class="mt-6 lg:mb-0 mb-6">
           <button
             class="bg-white text-lightBlue-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2"
             type="button"
@@ -50,9 +52,9 @@
           >
             <i class="fab fa-github"></i>
           </button>
-        </div>
+        </div>-->
       </div>
-      <div class="w-full lg:w-6/12 px-4">
+      <!--<div class="w-full lg:w-6/12 px-4">
         <div class="flex flex-wrap items-top mb-6">
           <div class="w-full lg:w-4/12 px-4 ml-auto">
             <span
@@ -129,7 +131,7 @@
               <li>
                 <a
                   class="text-blueGray-600 hover:text-blueGray-800 font-semibold block pb-2 text-sm"
-                  href="https://creative-tim.com/contact-us?ref=na-footer"
+                  href="info@vjsp.in"
                 >
                   Contact Us
                 </a>
@@ -137,10 +139,10 @@
             </ul>
           </div>
         </div>
-      </div>
+      </div>-->
     </div>
     <hr class="my-6 border-blueGray-300" />
-    <div class="flex flex-wrap items-center md:justify-between justify-center">
+    <!--<div class="flex flex-wrap items-center md:justify-between justify-center">
       <div class="w-full md:w-4/12 px-4 mx-auto text-center">
         <div class="text-sm text-blueGray-500 font-semibold py-1">
           Copyright © {{ date }} Notus Angular by
@@ -153,6 +155,6 @@
           .
         </div>
       </div>
-    </div>
+    </div>-->
   </div>
 </footer>
