--- a/src/app/views/index/index.component.html
+++ b/src/app/views/index/index.component.html
@@ -15,7 +15,7 @@
 
   <img
     class="absolute top-0 b-auto right-0 pt-16 sm:w-6/12 -mt-48 sm:mt-0 w-10/12 max-h-860-px"
-    src="assets/img/pattern_angular.png"
+    src="assets/img/logo-horizontal-light.png"
     alt="..."
   />
 </section>
@@ -40,7 +40,7 @@
       ></polygon>
     </svg>
   </div>
-  <div class="container mx-auto">
+  <div class="container mx-auto" id="panel">
     <div class="flex flex-wrap items-center">
       <div
         class="w-10/12 md:w-6/12 lg:w-4/12 px-12 md:px-4 mr-auto ml-auto -mt-32"
@@ -50,7 +50,7 @@
         >
           <img
             alt="..."
-            src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=80"
+            src="assets/img/laser_cutting.jpg"
             class="w-full align-middle rounded-t-lg"
           />
           <blockquote class="relative p-8 mb-4">
@@ -66,12 +66,10 @@
               ></polygon>
             </svg>
             <h4 class="text-xl font-bold text-white">
-              Great for your awesome project
+              Panel Board Manufacturing
             </h4>
             <p class="text-md font-light mt-2 text-white">
-              Putting together a page has never been easier than matching
-              together pre-made components. From landing pages presentation to
-              login areas, you can easily customise and built your pages.
+              Empowering the Future with Innovative State-of-the-Art Control Panels
             </p>
           </blockquote>
         </div>
@@ -105,8 +103,7 @@
                   Standard Control Panel
                 </h6>
                 <p class="mb-4 text-blueGray-500">
-                  We also feature many dynamic components for React, NextJS, Vue
-                  and Angular.
+                  Excellence in Standard Control Panel Manufacturing.
                 </p>
               </div>
             </div>
@@ -121,8 +118,7 @@
                 </div>
                 <h6 class="text-xl mb-1 font-semibold">Industrial Control Panel</h6>
                 <p class="mb-4 text-blueGray-500">
-                  This extension also comes with 3 sample pages. They are fully
-                  coded so you can start working instantly.
+                  Precision and Reliability in Industrial Control Panel Manufacturing
                 </p>
               </div>
             </div>
@@ -135,8 +131,7 @@
                 </div>
                 <h6 class="text-xl mb-1 font-semibold">Hazardous Location Control Panel</h6>
                 <p class="mb-4 text-blueGray-500">
-                  Built by developers for developers. You will love how easy is
-                  to to work with Notus Angular.
+                  Ensuring Safety with Hazardous Location Control Panel Manufacturing
                 </p>
               </div>
             </div>
@@ -146,7 +141,7 @@
     </div>
   </div>
 
-  <div class="container mx-auto overflow-hidden pb-20">
+  <div class="container mx-auto overflow-hidden pb-20" id="cable-tray">
     <div class="flex flex-wrap items-center">
       <!--<div class="w-full md:w-4/12 px-12 md:px-4 ml-auto mr-auto mt-48">
         <div
@@ -255,34 +250,24 @@
       <div class="w-full md:w-6/12 px-4 mr-auto ml-auto mt-32">
         <div class="justify-center flex flex-wrap relative">
           <div class="my-4 w-full lg:w-6/12 px-4">
-            <a
-              href="https://www.creative-tim.com/learning-lab/tailwind/svelte/alerts/notus?ref=vtw-index"
-              target="_blank"
-            >
               <div class="bg-red-600 shadow-lg rounded-lg text-center p-8">
                 <img
                   alt="..."
-                  class="shadow-md rounded-full max-w-full w-16 mx-auto p-2 bg-white"
-                  src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/logos/svelte.jpg"
+                  class="shadow-md rounded-full max-w-full w-20 mx-auto p-2 bg-white"
+                  src="assets/img/ladder-type-cable-tray.jpg"
                 />
                 <p class="text-lg text-white mt-4 font-semibold">Ladder</p>
               </div>
-            </a>
-            <a
-              href="https://www.creative-tim.com/learning-lab/tailwind/react/alerts/notus?ref=vtw-index"
-              target="_blank"
-            >
               <div
                 class="bg-lightBlue-500 shadow-lg rounded-lg text-center p-8 mt-8"
               >
                 <img
                   alt="..."
-                  class="shadow-md rounded-full max-w-full w-16 mx-auto p-2 bg-white"
-                  src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/logos/react.jpg"
+                  class="shadow-md rounded-full max-w-full w-20 mx-auto p-2 bg-white"
+                  src="assets/img/perforated-cable-tray.jpeg.webp"
                 />
                 <p class="text-lg text-white mt-4 font-semibold">Perforated</p>
               </div>
-            </a>
             <!--<a
               href="https://www.creative-tim.com/learning-lab/tailwind/nextjs/alerts/notus?ref=vtw-index"
               target="_blank"
@@ -299,33 +284,23 @@
               </div>
             </a>-->
           </div>
-          <div class="my-4 w-full lg:w-6/12 px-4 lg:mt-16">
-            <a
-              href="https://www.creative-tim.com/learning-lab/tailwind/js/alerts/notus?ref=vtw-index"
-              target="_blank"
-            >
+          <div class="my-4 w-full lg:w-6/12 px-4">
               <div class="bg-yellow-500 shadow-lg rounded-lg text-center p-8">
                 <img
                   alt="..."
-                  class="shadow-md rounded-full max-w-full w-16 mx-auto p-2 bg-white"
-                  src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/logos/js.png"
+                  class="shadow-md rounded-full max-w-full w-20 mx-auto p-2 bg-white"
+                  src="assets/img/sbt-1.jpg"
                 />
                 <p class="text-lg text-white mt-4 font-semibold">Solid Bottom</p>
               </div>
-            </a>
-            <a
-              href="https://www.creative-tim.com/learning-lab/tailwind/angular/alerts/notus?ref=vtw-index"
-              target="_blank"
-            >
               <div class="bg-red-700 shadow-lg rounded-lg text-center p-8 mt-8">
                 <img
                   alt="..."
-                  class="shadow-md rounded-full max-w-full w-16 mx-auto p-2 bg-white"
-                  src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/logos/angular.jpg"
+                  class="shadow-md rounded-full max-w-full w-20 mx-auto p-2 bg-white"
+                  src="assets/img/wire-mesh-cable-tray.jpeg"
                 />
                 <p class="text-lg text-white mt-4 font-semibold">Wire Mesh</p>
               </div>
-            </a>
             <!--<a
               href="https://www.creative-tim.com/learning-lab/tailwind/vue/alerts/notus?ref=vtw-index"
               target="_blank"
@@ -357,14 +332,7 @@
         <p
           class="text-lg font-light leading-relaxed mt-4 mb-4 text-blueGray-600"
         >
-          In order to create a great User Experience some components require
-          JavaScript. In this way you can manipulate the elements on the page
-          and give more options to your users.
-        </p>
-        <p
-          class="text-lg font-light leading-relaxed mt-4 mb-4 text-blueGray-600"
-        >
-          We created a set of Components that are dynamic and come to help you.
+        We manufacture high-quality cable trays, including ladder, solid bottom, perforated, and wire mesh types. Our products ensure efficient cable management, support, and protection in various applications, offering durability and reliability for all your cabling needs. Choose our cable trays for superior performance and seamless installation.
         </p>
         <!--<div class="block pb-6">
           <span
@@ -431,12 +399,12 @@
           </div>
           <h3 class="text-3xl font-semibold">Industries We Serve</h3>
           <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
-            - Oil & Gas
-            - Chemical Processing
-            - Power Generation
-            - Telecommunications
-            - Transportation
-            - Manufacturing
+            - Oil & Gas <br>
+            - Chemical Processing <br>
+            - Power Generation<br>
+            - Telecommunications<br>
+            - Transportation<br>
+            - Manufacturing<br>
             - Commercial Construction            
           </p>
           <!--<ul class="list-none mt-6">
@@ -500,7 +468,7 @@
             transform: scale(1) perspective(1040px) rotateY(-11deg)
               rotateX(2deg) rotate(2deg);
           "
-          src="assets/img/documentation.png"
+          src="assets/img/industries.jpg"
         />
       </div>
     </div>
