--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -3208,42 +3208,42 @@ select {
 
 .text-blueGray-100 {
   --tw-text-opacity: 1;
-  color: rgba(241, 245, 249, var(--tw-text-opacity));
+  color: rgba(0, 0, 128, var(--tw-text-opacity));
 }
 
 .text-blueGray-200 {
   --tw-text-opacity: 1;
-  color: rgba(226, 232, 240, var(--tw-text-opacity));
+  color: rgba(0, 0, 128, var(--tw-text-opacity));
 }
 
 .text-blueGray-300 {
   --tw-text-opacity: 1;
-  color: rgba(203, 213, 225, var(--tw-text-opacity));
+  color: rgba(0, 0, 128, var(--tw-text-opacity));
 }
 
 .text-blueGray-400 {
   --tw-text-opacity: 1;
-  color: rgba(148, 163, 184, var(--tw-text-opacity));
+  color: rgba(0, 0, 128, var(--tw-text-opacity));
 }
 
 .text-blueGray-500 {
   --tw-text-opacity: 1;
-  color: rgba(100, 116, 139, var(--tw-text-opacity));
+  color: rgba(0, 0, 128, var(--tw-text-opacity));
 }
 
 .text-blueGray-600 {
   --tw-text-opacity: 1;
-  color: rgba(71, 85, 105, var(--tw-text-opacity));
+  color: rgba(0, 0, 128, var(--tw-text-opacity));
 }
 
 .text-blueGray-700 {
   --tw-text-opacity: 1;
-  color: rgba(51, 65, 85, var(--tw-text-opacity));
+  color: rgba(0, 0, 128, var(--tw-text-opacity));
 }
 
 .text-blueGray-800 {
   --tw-text-opacity: 1;
-  color: rgba(30, 41, 59, var(--tw-text-opacity));
+  color: rgba(0, 0, 128, var(--tw-text-opacity));
 }
 
 .hover\:text-red-700:hover {
@@ -3488,7 +3488,9 @@ select {
 .w-16 {
   width: 4rem;
 }
-
+.w-20{
+  width:8rem;
+}
 .w-auto {
   width: auto;
 }
