--- a/src/app/views/index/index.component.html
+++ b/src/app/views/index/index.component.html
@@ -264,7 +264,7 @@
                 <img
                   alt="..."
                   class="shadow-md rounded-full max-w-full w-20 mx-auto p-2 bg-white"
-                  src="assets/img/perforated-cable-tray.jpeg.webp"
+                  src="assets/img/perforated-cable-tray.jpeg"
                 />
                 <p class="text-lg text-white mt-4 font-semibold">Perforated</p>
               </div>
