--- a/src/app/views/index/index.component.html
+++ b/src/app/views/index/index.component.html
@@ -4,7 +4,7 @@
     <div class="w-full md:w-8/12 lg:w-6/12 xl:w-6/12 px-4">
       <div class="pt-32 sm:pt-0">
         <h2 class="font-semibold text-4xl text-blueGray-600">
-         VJSP India Private Ltd.
+         VJSP System Private Ltd.
         </h2>
         <p class="mt-4 text-lg leading-relaxed text-blueGray-500">
           One of the the global leader in control panel and cable tray manufacturing, delivering superior quality products that ensure safety, efficiency, and sustainability for diverse industries. We aim to set the benchmark in engineering excellence, fostering a culture of continuous improvement, customer satisfaction, and environmental stewardship. Through cutting-edge technology and dedicated craftsmanship, we strive to empower our clients with reliable and tailored solutions, driving progress and connectivity in a rapidly evolving world.
